--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= concert.date %></td>
         <td><%= concert.notes %></td>
-        <td><%= concert.artist_id %></td>
+        <td><%= concert.artist.name %></td>
         <td><%= concert.venue_id %></td>
         <td>
           <a href="/concerts/<%= concert.id %>" class="btn btn-primary">Show</a>
