Replace foreign key text inputs in concerts with dropdowns

--- a/app/views/concerts/edit.html.erb
+++ b/app/views/concerts/edit.html.erb
@@ -42,7 +42,7 @@
           Artist
         </label>
 
-        <input type="text" id="artist_id" name="artist_id" placeholder="Artist" class="form-control" value="<%= @concert.artist_id %>">
+        <%= select_tag(:artist_id, options_from_collection_for_select(Artist.all, :id, :name, @concert.artist_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for venue_id -->
