--- a/app/views/concerts/edit.html.erb
+++ b/app/views/concerts/edit.html.erb
@@ -51,7 +51,7 @@
           Venue
         </label>
 
-        <input type="text" id="venue_id" name="venue_id" placeholder="Venue" class="form-control" value="<%= @concert.venue_id %>">
+        <%= select_tag(:venue_id, options_from_collection_for_select(Venue.all, :id, :name, @concert.venue_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
