--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -26,3 +26,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Venue has many concerts -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Concerts
+      </li>
+
+      <% @venue.concerts.each do |concert| %>
+        <li class="list-group-item">
+          <a href="/concerts/<%= concert.id %>">
+            <%= concert.date %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/concerts/<%= concert.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/concerts/<%= concert.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_concert/<%= concert.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
