--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -54,6 +54,47 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_concert" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for date -->
+      <div class="form-group">
+        <label for="date" class="control-label">
+          Date
+        </label>
+
+        <input type="text" id="date" name="date" placeholder="Date" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for notes -->
+      <div class="form-group">
+        <label for="notes" class="control-label">
+          Notes
+        </label>
+
+        <input type="text" id="notes" name="notes" placeholder="Notes" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for artist_id -->
+      <div class="form-group">
+        <label for="artist_id" class="control-label">
+          Artist
+        </label>
+
+        <%= select_tag(:artist_id, options_from_collection_for_select(Artist.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for venue_id -->
+      <input type="hidden" name="venue_id" value="<%= @venue.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Concert
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
