--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -9,7 +9,7 @@
       <dd><%= @artist.name %></dd>
 
       <dt>Image</dt>
-      <dd><%= @artist.image %></dd>
+      <dd><img src="<%= @artist.image %>" width="200px"></dd>
 
       <dt>Description</dt>
       <dd><%= @artist.description %></dd>
