--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -125,8 +125,8 @@
 
       <% @artists.each do |artist| %>
       <tr>
+        <td><img src="<%= artist.image %>" width="200px"></td>
         <td><%= artist.name %></td>
-        <td><%= artist.image %></td>
         <td><%= artist.description %></td>
         <td>
           <a href="/artists/<%= artist.id %>" class="btn btn-primary">Show</a>
